--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
 language: ruby
 
 rvm:
-  - 2.0.0
-  - 2.1.5
-  - 2.2.4
-  - 2.3.0
+  - 2.6.3
 env:
   - DB=redis
 
 services:
-  - redis-server
+  - redis
 
 sudo: false
